@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-13T01:15:59Z",
-  "count_outdated" : 205,
-  "uniques_outdated" : 144,
+  "timestamp" : "2023-08-14T16:20:00Z",
+  "count_outdated" : 206,
+  "uniques_outdated" : 145,
   "count" : 207,
   "uniques" : 146,
   "clones" : [
-    {
-      "timestamp": "2023-07-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-12T00:00:00Z",
       "count": 1,
